<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupbg"
    android:gravity="center">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="6dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteless"
            android:orientation="vertical"
            android:padding="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardcancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    card_view:cardBackgroundColor="@color/colorPrimaryDark"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="6dp">

                    <TextView
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:shadowColor="@color/colorshadow"
                        android:shadowDx="1.5"
                        android:shadowDy="1.5"
                        android:shadowRadius="2"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/popuptext"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>


                <TextView
                    android:id="@+id/titletxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignBottom="@+id/cardcancel"
                    android:layout_alignTop="@+id/cardcancel"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:shadowColor="@color/colorshadow"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="Select Room"
                    android:textColor="@color/black"
                    android:textSize="@dimen/popuptext"
                    android:textStyle="bold" />


                <android.support.v7.widget.CardView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:visibility="invisible"

                    card_view:cardBackgroundColor="@color/colorPrimaryDark"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="6dp">

                    <TextView
                        android:id="@+id/temptext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:shadowColor="@color/colorshadow"
                        android:shadowDx="1.5"
                        android:shadowDy="1.5"
                        android:shadowRadius="2"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/popuptext"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/temp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/temp"

                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    card_view:cardBackgroundColor="@color/colorPrimaryDark"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="6dp">

                    <TextView
                        android:id="@+id/ok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:padding="5dp"
                        android:shadowColor="@color/colorshadow"
                        android:shadowDx="1.5"
                        android:shadowDy="1.5"
                        android:shadowRadius="2"
                        android:text="@string/ok"
                        android:textColor="@color/white"
                        android:textSize="@dimen/popuptext"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/cardcancel"
                    android:layout_marginTop="5dp"
                    android:background="@color/black" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:columnWidth="110dp"
                    android:gravity="center"
                    android:numColumns="3"
                    android:scrollbars="none" />

                <TextView
                    android:id="@+id/nodevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:background="@android:color/transparent"

                    android:gravity="left|center"
                    android:padding="5dp"
                    android:shadowColor="@color/colorshadow"
                    android:shadowDx="1.5"
                    android:shadowDy="1.5"
                    android:shadowRadius="2"
                    android:text="@string/no_device_found"
                    android:textColor="@color/black"
                    android:textSize="@dimen/popuptext"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
